# cpp-notes

./: README.md
exceptions/: main.cpp
libs/googletests/: CMakeLists.txt  main.cpp  main.h  tests.cpp
syntax/exceptions/: CMakeLists.txt  main.cpp
syntax/lambda-functions/: CMakeLists.txt  main.cpp
syntax/move-r_value-l_value/: CMakeLists.txt  main.cpp
syntax/ranges/: CMakeLists.txt  main.cpp
syntax/templates/: CMakeLists.txt  main.cpp
